--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <!--Logo - Get SVGs if you can.  I use fiverr to get png's turned into SVGs. Highly recommend it, worth the $20 - get a light and dark version-->
             <a class="logo" aria-label="click to go to home page" href="./index.html">
                 <!--Light Colored Logo, remove .dark image tag and the .light class if you don't have a dark and light version -->
-                <div class="logo">PRIME</div>
+                <div class="logo">PRIME BARBER</div>
                 
             </a>
 
@@ -84,9 +84,7 @@
             <!--Dark Mode toggle - REMOVED FOR PRIME BARBERS-->
            <!--  <button id="dark-mode-toggle"> -->
                 <!--Moon is an inline SVG so you can edit the color if needed-->
-              <!--   <svg class="moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 480" style="enable-background:new 0 0 480 480" xml:space="preserve"><path d="M459.782 347.328c-4.288-5.28-11.488-7.232-17.824-4.96-17.76 6.368-37.024 9.632-57.312 9.632-97.056 0-176-78.976-176-176 0-58.4 28.832-112.768 77.12-145.472 5.472-3.712 8.096-10.4 6.624-16.832S285.638 2.4 279.078 1.44C271.59.352 264.134 0 256.646 0c-132.352 0-240 107.648-240 240s107.648 240 240 240c84 0 160.416-42.688 204.352-114.176 3.552-5.792 3.04-13.184-1.216-18.496z"/></svg>
-                <img class="sun" aria-hidden="true" src="./images/sun.svg" decoding="async" alt="moon" width="15" height="15">
-            </button> -->
+      
 
             <!--Mobile Nav toggle-->
             <button class="hamburger-menu">
@@ -103,19 +101,17 @@
         <section id="hero">
             <div class="hero-content">
                 <div class="heroText">
-                    <h1 id="home-h">Main Keywords of What They Do, And Location If Needed</h1>
+                    <h1 id="home-h">Traditional Walk-In Barber Shop</h1>
                     <p>
-                        Talk about the other services they do with keywords and locations where they serve.  Try to make this 2-3 lines tall.
+                        An experienced barber offering quality cuts and restyles for reasonable prices.
                     </p>
                     <a class="button-solid" href="./contact.html" target="_blank" rel="noopener">
-                        Main Call To Action
+                        Make a Booking
                     </a>
                 </div>
             </div>
             <picture>
-                <source media="(max-width: 600px)" srcset="./images/landing-m.webp">
-                <source media="(min-width: 601px)" srcset="./images/landing.jpg">
-                <img aria-hidden="true" decoding="async" src="./images/landing.jpg" alt="new home" width="275" height="132">
+                <img aria-hidden="true" decoding="async" src="./images/apothecary.jpg" alt="new home" width="275" height="132">
              </picture>
         </section>
 
@@ -127,29 +123,29 @@
             <!-- Get Icons From flaticon.com -->
             <div class="card">
                 <picture>
-                    <img aria-hidden="true" decoding="async" src="./images/service1.svg" alt="appliance" width="48" height="48">
+                    <img aria-hidden="true" decoding="async" src="./images/Service1.png" alt="Barber Pole" width="48" height="48">
                 </picture>
-                <h2>Service 1</h2>
+                <h2>Classic Cuts</h2>
                 <p>
-                    Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.
+                    Classic, timeless and elegent haircuts available by appointment or walk-in.
                 </p>
             </div>
             <div class="card">
                 <picture>
-                    <img aria-hidden="true" decoding="async" src="./images/service2.svg" alt="appliance" width="48" height="48">
+                    <img aria-hidden="true" class="service2" decoding="async" src="./images/Service2.png" alt="Victorian Gent" width="48" height="48">
                 </picture>
-                <h2>Service 2</h2>
+                <h2>Restyles</h2>
                 <p>
-                    Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.
+                    Prime Barber offers restyles for all hair lengths and types, bring in a picture or simply ask for a new style.
                 </p>
             </div>
             <div class="card">
                 <picture>
-                    <img aria-hidden="true" decoding="async" src="./images/service3.svg" alt="appliance" width="48" height="48">
+                    <img aria-hidden="true" decoding="async" src="./images/Service3.png" alt="Bearded Gentlemen" width="48" height="48">
                 </picture>
-                <h2>Service 3</h2>
+                <h2>Bearded Gentlemen</h2>
                 <p>
-                    Talk about the service with keywords people will be searching for it by. Keep it 1-2 sentences.
+                    Precise beard sculpting, trimming and tidying, with hot shaves available.
                 </p>
             </div>
         </section>
