<Update> updated imgs in about section, CSS in Root & copy in About.

--- a/index.html
+++ b/index.html
@@ -157,29 +157,31 @@
         <section id="sidebyside" class="sidebyside">
             <div class="container">
                 <div class="content">
-                    <h2 class="title">Trusted home builders for (main city) for over 20 years</h2>
+                    <h2 class="title">Trusted Barber, Serving Chester for Over 10 years</h2>
                      <p>
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam debitis dolor consectetur dolorem inventore modi tenetur ex odit, amet beatae ad, doloribus tempora quae ab nulla minus temporibus at veritatis!
+                         Nigel Tudor, has worked all over the world, from the glory days of 1990's Saudi Arabia, to touring the united kingdom offering
+                         advice and guidance to up and coming salons and professionals. His love of motorcycles, dogs and football keeps him young and 
+                         his approach modern.
                      </p>
                      <p>
-                         <strong>A list if you need it:</strong>
+                         <strong>Nigel's Passions:</strong>
                       </p>
                      <ul>
                         <li>
                             <img aria-hidden="true" loading="lazy" decoding="async" src="./images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something, this one is going to two lines so you can see what it looks like</span>
+                            <span>Motorcycles, from vintage Triumphs to the latest Suzuki</span>
                         </li>
                         <li>
                             <img aria-hidden="true" loading="lazy" decoding="async" src="./images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
-                        </li>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
+                            <span>Football, come down and enjoy a chat about the latest match</span>
                         </li>
                         <li>
                             <img aria-hidden="true" loading="lazy" decoding="async" src="./images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
+                            <span>Life, who doesn't need a good vent? Come out with a fresh trim and a feesh attitude.</span>
+                        </li>
+                        <li>
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/check.svg" alt="check mark" width="20" height="20">
+                            <span></span>
                         </li>
                         <li>
                             <img aria-hidden="true" loading="lazy" decoding="async" src="./images/check.svg" alt="check mark" width="20" height="20">
@@ -192,9 +194,9 @@
                      <a class="button-solid" href="./about.html">More About Us</a>
                 </div>
                 <picture class="image-box">
-                     <source media="(max-width: 600px)" srcset="/images/cabinets2-m.jpg">
-                     <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                     <img aria-hidden="true" loading="lazy" decoding="async" src="./images/cabinets2.jpg" alt="cabinets" width="400" height="662">
+                     <source media="(max-width: 600px)" srcset="./images/AboutAltImage.jpg">
+                     <source media="(min-width: 601px)" srcset="./images/AboutAltImage.jpg">
+                     <img aria-hidden="true" loading="lazy" decoding="async" src="./images/AboutAltImage.jpg" alt="cabinets" width="400" height="662">
                  </picture>
             </div>
        </section>
@@ -261,9 +263,9 @@
                 <a href="./contact.html" class="button-solid">Get an Estimate Now</a>
             </div>
             <picture>
-                <source media="(max-width: 600px)" srcset="/images/cabinets2-m.webp">
-                <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="./images/cabinets2.jpg" alt="kitchen cabinets" width="1920" height="1280">
+                <source media="(max-width: 600px)" srcset="./images/BikePhoto.jpg">
+                <source media="(min-width: 601px)" srcset="./images/BikePhoto.jpg">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="./images/BikePhoto.jpg" alt="kitchen cabinets" width="1920" height="1280">
              </picture>
         </section>
     </main>
