<update> updated index.js & Services Section

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     <!--Favicons-->
     <!--Use https://realfavicongenerator.net/ to generate and download your favicons-->
     <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon-32x32.png?v1">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/barber-shop32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/BarberPole16.png">
     <link rel="manifest" href="/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
@@ -74,10 +74,10 @@
             <nav id="navbar-menu">
                 <ul>
                     <li><a class="active" href="/index.html">Home</a></li>
-                    <li><a href="/about.html">About Us</a></li>
-                    <li><a href="/projects.html">Projects</a></li>
-                    <li><a href="/reviews.html">Reviews</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="./about.html">About Us</a></li>
+                    <li><a href="./projects.html">Projects</a></li>
+                    <li><a href="./reviews.html">Reviews</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
 
@@ -177,21 +177,18 @@
                         </li>
                         <li>
                             <img aria-hidden="true" loading="lazy" decoding="async" src="./images/check.svg" alt="check mark" width="20" height="20">
-                            <span>Life, who doesn't need a good vent? Come out with a fresh trim and a feesh attitude.</span>
+                            <span>Life, who doesn't need a good vent? Come out with a fresh trim and a fresh attitude.</span>
                         </li>
                         <li>
                             <img aria-hidden="true" loading="lazy" decoding="async" src="./images/check.svg" alt="check mark" width="20" height="20">
-                            <span></span>
+                            <span>Going for a night-out? Get a quick touch-up before hitting the town.</span>
                         </li>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
-                        </li>
+                        
                     </ul>
                      <p>
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium saepe laborum nam consequuntur porro inventore odio? Quod autem alias ratione cum reiciendis qui quaerat, sequi voluptatum voluptatibus, iusto itaque sed ullam. Quis, maiores corrupti. Rerum quo laudantium vero magnam tempora!
+                       Prime Barbers offers more than just a hair-cut, it offers a friend, confidant and place, where you leave your worries at the door.  
                      </p>
-                     <a class="button-solid" href="./about.html">More About Us</a>
+                     <!-- <a class="button-solid" href="./about.html">More About Us</a> -->
                 </div>
                 <picture class="image-box">
                      <source media="(max-width: 600px)" srcset="./images/AboutAltImage.jpg">
