<update> Updated side-by-side reverse imgs and local.less

--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
             <nav id="navbar-menu">
                 <ul>
                     <li><a class="active" href="/index.html">Home</a></li>
-                    <li><a href="./about.html">About Us</a></li>
-                    <li><a href="./projects.html">Projects</a></li>
+                    <!-- <li><a href="./about.html">About Us</a></li> -->
+                    <li><a href="./projects.html">Gallery</a></li>
                     <li><a href="./reviews.html">Reviews</a></li>
                     <li><a href="./contact.html">Contact</a></li>
                 </ul>
@@ -193,7 +193,7 @@
                 <picture class="image-box">
                      <source media="(max-width: 600px)" srcset="./images/AboutAltImage.jpg">
                      <source media="(min-width: 601px)" srcset="./images/AboutAltImage.jpg">
-                     <img aria-hidden="true" loading="lazy" decoding="async" src="./images/AboutAltImage.jpg" alt="cabinets" width="400" height="662">
+                     <img aria-hidden="true" loading="lazy" decoding="async" src="./images/AboutAltImage.jpg" alt="barber" width="400" height="662">
                  </picture>
             </div>
        </section>
@@ -205,44 +205,48 @@
         <section id="sidebyside-reverse">
             <div class="container">
                 <div class="content">
-                    <h2 class="title">Extra content, maybe talk about a main service</h2>
-                     <p>
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quibusdam debitis dolor consectetur dolorem inventore modi tenetur ex odit, amet beatae ad, doloribus tempora quae ab nulla minus temporibus at veritatis!
-                     </p>
-                     <p>
-                         <strong>A list if you need it:</strong>
-                      </p>
+                    <h2 class="title">Price List</h2>
+                    
+                   
                      <ul>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
+                        <li class="list-item">
+                            <span>Classic Cut</span>
+                            <span id="li-cost">16</span>
                         </li>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
+                        <li class="list-item">
+                            <span>Restyles</span>
+                            <span id="li-cost">20</span>
                         </li>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
+                        <li class="list-item">
+                            <span>Beard Line-up</span>
+                            <span id="li-cost">8</span>
                         </li>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
+                        <li class="list-item">
+                            <span>Beard Style and Treatment</span>
+                            <span id="li-cost">20</span>
                         </li>
-                        <li>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/check.svg" alt="check mark" width="20" height="20">
-                            <span>List item about something</span>
+                        <li class="list-item">
+                            <span>Haircut and Beard</span>
+                            <span id="li-cost">30</span>
+                        </li>
+                        <li class="list-item">
+                            <span>Haircut, Beard with Shampoo and Finish</span>
+                            <span id="li-cost">35</span>
+                        </li>
+                        <li class="list-item">
+                            <span>OAP Haircut & Finish</span>
+                            <span id="li-cost">18</span>
                         </li>
                     </ul>
                      <p>
-                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusantium saepe laborum nam consequuntur porro inventore odio? Quod autem alias ratione cum reiciendis qui quaerat, sequi voluptatum voluptatibus, iusto itaque sed ullam. Quis, maiores corrupti. Rerum quo laudantium vero magnam tempora!
+                         All prices are from, if you have a specific style in mind or picture, then bring that along and <strong>PRIME</strong> will do our best to get you the style you are looking for. 
                      </p>
-                     <a class="button-solid" href="./contact.html">Get Free Quote</a>
+                     <a class="button-solid" href="./contact.html">Contact to Book</a>
                 </div>
                 <picture class="image-box">
-                     <source media="(max-width: 600px)" srcset="./images/cabinets2-m.jpg">
-                     <source media="(min-width: 601px)" srcset="./images/cabinets2.jpg">
-                     <img aria-hidden="true" loading="lazy" decoding="async" src="./images/cabinets2.jpg" alt="cabinets" width="400" height="662">
+                     <source media="(max-width: 600px)" srcset="./images/ExtraContentImg.jpg">
+                     <source media="(min-width: 601px)" srcset="./images/ExtraContentImg.jpg">
+                     <img aria-hidden="true" loading="lazy" decoding="async" src="./images/ExtraContentImg.jpg" alt="cabinets" width="400" height="662">
                  </picture>
             </div>
        </section>
