<update> Index.html finished, move to contact

--- a/index.html
+++ b/index.html
@@ -257,11 +257,11 @@
 
         <section id="cta">
             <div class="container">
-                <h2 class="title">Get It Done <br> With Us Today</h2>
+                <h2 class="title">Come on Down </h2>
                 <p>
-                    Say something catchy, informative, and encouraging to click the button to go to the contact page.  I like to add these to the bottom of all pages.
+                    Contact to book, or feel free to head down to our shop in Hoole and get a walk-in appointment.
                 </p>
-                <a href="./contact.html" class="button-solid">Get an Estimate Now</a>
+                <a href="./contact.html" class="button-solid">Find out where we are</a>
             </div>
             <picture>
                 <source media="(max-width: 600px)" srcset="./images/BikePhoto.jpg">
@@ -278,33 +278,30 @@
     <footer id="footer">
         <div class="container">
             <div class="left-section">
-                <a class="logo" href="./index.html"><img loading="lazy" decoding="async" src="./images/logo-light.png" alt="logo" width="264" height="78"></a>
-                <p>
-                    Extra content if you need it, if not you can delete this whole p tag. I usually do.
-                </p>
+                <!-- <a class="logo" href="./index.html"><img loading="lazy" decoding="async" src="./images/logo-light.png" alt="logo" width="264" height="78"></a> -->
             </div>
             <div class="right-section">
                 <div class="lists">
                     <ul>
                         <li><h2>Information</h2></li>
                         <li><a href="./index.html">Home</a></li>
-                        <li><a href="./about.html">About Us</a></li>
-                        <li><a href="./projects.html">Projects</a></li>
+                        <!-- <li><a href="./about.html">About Us</a></li> -->
+                        <li><a href="./projects.html">Gallery</a></li>
                         <li><a href="./testimonials.html">Reviews</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
-                    <ul>
+                    <!-- <ul>
                         <li><h2>Services</h2></li>
                         <li>Service1</li>
                         <li>Service2</li>
                         <li>Service4</li>
                         <li>Service5</li>
-                    </ul>
+                    </ul> -->
                     <ul>
                         <li><h2>Contact</h2></li>
-                        <li><a href="./contact.html">First Address Line<br>Denver CO 80206</a></li>
-                        <li><a href="tel:555-779-4407">T: (555) 779-4407</a></li>
-                        <li><a href="mailto:email@email.com">Click to Email</a></li>
+                        <li><a href="./contact.html">18A Faulkner St,<br> Hoole, Chester CH2 3BD</a></li>
+                        <li><a href="tel:07545 444435">T: 07545 444435</a></li>
+                        <!-- <li><a href="mailto:email@email.com">Click to Email</a></li> -->
                     </ul>
                 </div>
             </div>
@@ -312,13 +309,13 @@
 
         <div class="credit">
             <span>Designed and Hand Coded by</span>
-            <a href="" target="_blank" rel="noopener">Your Company Name</a>
-            <span class="copyright"> Copyright 2021 - Present</span></div>
+            <a href="https://github.com/VenexCon" target="_blank" rel="noopener">VenexCon</a>
+            <span class="copyright"> Copyright 2022 - Present</span></div>
     </footer>
 
 
     <script defer src="./nav.js"></script>
-    <script defer src="./dark.js"></script>
+   <!--  <script defer src="./dark.js"></script> -->
     <!--
         This script adds a class to the body after scrolling 100px
         and we used these body.scroll styles to create some on scroll 
