<restyle> removed justify-content and flex-wrap from mobile landscape contact.css

--- a/index.html
+++ b/index.html
@@ -209,32 +209,32 @@
                    
                      <ul>
                         <li class="list-item">
+                            <span>Beard Trim</span>
+                            <span id="li-cost">4.50</span>
+                        </li>
+                        <li class="list-item">
+                            <span>Seniors (Tues & Wed Only)</span>
+                            <span id="li-cost">10</span>
+                        </li>
+                        <li class="list-item">
+                            <span>All Over Clippers</span>
+                            <span id="li-cost">11</span>
+                        </li>
+                        <li class="list-item">
+                            <span>Child up to 8 Yrs</span>
+                            <span id="li-cost">12</span>
+                        </li>
+                        <li class="list-item">
+                            <span>Skin Fade</span>
+                            <span id="li-cost">15</span>
+                        </li>
+                        <li class="list-item">
                             <span>Classic Cut</span>
                             <span id="li-cost">16</span>
                         </li>
                         <li class="list-item">
-                            <span>Restyles</span>
-                            <span id="li-cost">20</span>
-                        </li>
-                        <li class="list-item">
-                            <span>Beard Line-up</span>
-                            <span id="li-cost">8</span>
-                        </li>
-                        <li class="list-item">
-                            <span>Beard Style and Treatment</span>
-                            <span id="li-cost">20</span>
-                        </li>
-                        <li class="list-item">
-                            <span>Haircut and Beard</span>
-                            <span id="li-cost">30</span>
-                        </li>
-                        <li class="list-item">
-                            <span>Haircut, Beard with Shampoo and Finish</span>
-                            <span id="li-cost">35</span>
-                        </li>
-                        <li class="list-item">
-                            <span>OAP Haircut & Finish</span>
-                            <span id="li-cost">18</span>
+                            <span>Wash, Cut & Finish</span>
+                            <span id="li-cost">16.50</span>
                         </li>
                     </ul>
                      <p>
