<update> Updated footer in contact.html with link to GH

--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <meta property="og:image:secure_url" content="./images/social.jpg"/>
 
     <!--Favicons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/barber-shop32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/BarberPole16.png">
     <link rel="manifest" href="/site.webmanifest">
@@ -184,22 +184,14 @@
                 <div class="lists">
                     <ul>
                         <li><h2>Information</h2></li>
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a href="/about.html">About Us</a></li>
-                        <li><a href="/projects.html">Projects</a></li>
-                        <li><a href="/testimonials.html">Reviews</a></li>
-                        <li><a href="/contact.html">Contact</a></li>
-                    </ul>
-                    <ul>
-                        <li><h2>Services</h2></li>
-                        <li>Service1</li>
-                        <li>Service2</li>
-                        <li>Service4</li>
-                        <li>Service5</li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./projects.html">Gallery</a></li>
+                        <li><a href="./testimonials.html">Reviews</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
                     </ul>
                     <ul>
                         <li><h2>Contact</h2></li>
-                        <li><a href="/contact.html">First Address Line<br>Denver CO 80206</a></li>
+                        <li><a href="./contact.html">First Address Line<br>Denver CO 80206</a></li>
                         <li><a href="tel:555-779-4407">T: (555) 779-4407</a></li>
                         <li><a href="mailto:email@email.com">Click to Email</a></li>
                     </ul>
@@ -209,7 +201,7 @@
 
         <div class="credit">
             <span>Designed and Hand Coded by</span>
-            <a href="" target="_blank" rel="noopener">Your Company Name</a>
+            <a href="https://github.com/VenexCon" target="_blank" rel="noopener">VenexCon</a>
             <span class="copyright"> Copyright 2021 - Present</span></div>
     </footer>
 
