<update> Updated review card picture with flex

--- a/contact.html
+++ b/contact.html
@@ -191,9 +191,8 @@
                     </ul>
                     <ul>
                         <li><h2>Contact</h2></li>
-                        <li><a href="./contact.html">First Address Line<br>Denver CO 80206</a></li>
-                        <li><a href="tel:555-779-4407">T: (555) 779-4407</a></li>
-                        <li><a href="mailto:email@email.com">Click to Email</a></li>
+                        <li><a href="./contact.html">18A Faulkner St,<br> Hoole, Chester CH2 3BD</a></li>
+                        <li><a href="tel:07545 444435">T: 07545 444435</a></li>
                     </ul>
                 </div>
             </div>
