--- a/reviews.html
+++ b/reviews.html
@@ -8,27 +8,28 @@
     <!--Swap our for actual link-->
     <link rel="canonical" href="https://www.company.com/reviews">
 
-    <meta name="description" content="">
-    <meta name="keywords" content="">
+    <meta name="description" content="Mens Barbers In Chester">
+    <meta name="keywords" content="Barbers Mens Chester">
 
     <!--Social Media Display-->
-    <meta property="og:title" content=""/>
-    <meta property="og:description" content=""/>
+    <meta property="og:title" content="PRIME BARBERS" />
+    <meta property="og:description" content="Mens Barbers in Chester" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content=""/>
-    <meta property="og:image" content="/images/social.jpg"/>
-    <meta property="og:image:secure_url" content="/images/social.jpg"/>
+    <meta property="og:url" content="" />
+    <meta property="og:image" content="./images/social.jpg" />
+    <meta property="og:image:secure_url" content="./images/social.jpg" />
 
     <!--Favicons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v1">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <!--Use https://realfavicongenerator.net/ to generate and download your favicons-->
+    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./images/barber-shop32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./images/BarberPole16.png">
+    <link rel="manifest" href="./site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 
     <!-- Preload -->
-    <link rel="preload" as="image" href="/images/cabinets2-m.jpg">
+    <link rel="preload" as="image" href="./images/cabinets2-m.jpg">
     <link rel="preload" as="font" type="font/woff2" href="fonts/roboto-v29-latin-regular.woff2" crossorigin>
     <link rel="preload" as="font" type="font/woff2" href="fonts/roboto-v29-latin-700.woff2" crossorigin>
 
@@ -38,7 +39,7 @@
 
     <!--Put analytics tag here at the bottom to prevent it from render blocking-->
 
-    <title>Company Name | Reviews | Town and State</title>
+    <title>PRIME | BARBERS | CHESTER</title>
 </head>
 <body>
     <!--Screen reader skip main nav-->
@@ -57,31 +58,20 @@
         </div>
         <div class="container">
             <!--Logo - Get SVGs if you can.  I use fiverr to get png's turned into SVGs. Highly recommend it, worth the $20 - get a light and dark version-->
-            <a class="logo" aria-label="click to go to home page" href="/index.html">
-                <!--Light Colored Logo, remove .dark image tag and the .light class if you don't have a dark and light version -->
-                <img class="light" aria-hidden="true" src="/images/logo-light.png" decoding="async" alt="logo" width="221" height="66">
-
-                <!--Dark Colored Logo-->
-                <img class="dark" aria-hidden="true" src="/images/logo-blue.png" decoding="async" loading="lazy" alt="logo" width="221" height="66">
-            </a>
+            <a class="logo" aria-label="click to go to home page" href="./index.html">PRIME BARBER</a>
 
             <!--Main Nav-->
             <nav id="navbar-menu">
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="/about.html">About Us</a></li>
-                    <li><a href="/projects.html">Projects</a></li>
-                    <li><a class="active" href="/reviews.html">Reviews</a></li>
-                    <li><a href="/contact.html">Contact</a></li>
+                    <li><a href="./index.html">Home</a></li>
+                    <li><a href="./projects.html">Gallery</a></li>
+                    <li><a class="active" href="./reviews.html">Reviews</a></li>
+                    <li><a href="./contact.html">Contact</a></li>
                 </ul>
             </nav>
 
-            <!--Dark Mode toggle-->
-            <button id="dark-mode-toggle">
-                <!--Moon is an inline SVG so you can edit the color if needed-->
-                <svg class="moon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 480 480" style="enable-background:new 0 0 480 480" xml:space="preserve"><path d="M459.782 347.328c-4.288-5.28-11.488-7.232-17.824-4.96-17.76 6.368-37.024 9.632-57.312 9.632-97.056 0-176-78.976-176-176 0-58.4 28.832-112.768 77.12-145.472 5.472-3.712 8.096-10.4 6.624-16.832S285.638 2.4 279.078 1.44C271.59.352 264.134 0 256.646 0c-132.352 0-240 107.648-240 240s107.648 240 240 240c84 0 160.416-42.688 204.352-114.176 3.552-5.792 3.04-13.184-1.216-18.496z"/></svg>
-                <img class="sun" aria-hidden="true" src="/images/sun.svg" decoding="async" alt="moon" width="15" height="15">
-            </button>
+            <!--Dark Mode toggle - REMOVED FOR PRIME BARBERS-->
+            
 
             <!--Mobile Nav toggle-->
             <button class="hamburger-menu">
@@ -97,11 +87,11 @@
         <!-- ============================================ -->
     
         <section id="int-hero">
-            <h1 id="home-h">Our Reviews</h1>
+            <h1 id="home-h">Reviews</h1>
             <picture>
-                <source media="(max-width: 600px)" srcset="/images/cabinets2-m.jpg">
-                <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="/images/cabinets2.jpg" alt="" width="400" height="662">
+                <source media="(max-width: 600px)" srcset="./images/review-banner.jpg">
+                <source media="(min-width: 601px)" srcset="./images/review-banner.jpg">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="./images/review-banner.jpg" alt="" width="400" height="662">
             </picture>
         </section>
 
@@ -113,7 +103,7 @@
             <div class="container">
                 <div class="review">
                     <picture>
-                        <img class="profile" loading="lazy" decoding="async" src="/images/profile.svg" alt="" width="99" height="99">
+                        <img class="profile" loading="lazy" decoding="async" src="./images/man.png" alt="" width="99" height="99">
                      </picture>
                      <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
@@ -121,13 +111,17 @@
                      <div class="star-group">
                         <span class="name">B Miller<span class="desc">Homeowner</span></span>
                          <picture>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/stars.svg" alt="stars" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
                          </picture>
                      </div>
                 </div>
                 <div class="review">
                     <picture>
-                        <img class="profile" loading="lazy" decoding="async" src="/images/profile.svg" alt="" width="99" height="99">
+                        <img class="profile" loading="lazy" decoding="async" src="./images/man.png" alt="" width="99" height="99">
                      </picture>
                      <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
@@ -135,13 +129,13 @@
                      <div class="star-group">
                         <span class="name">Vincent M.<span class="desc">Homeowner</span></span>
                          <picture>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/stars.svg" alt="stars" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
                          </picture>
                      </div>
                 </div>
                 <div class="review">
                     <picture>
-                        <img class="profile" loading="lazy" decoding="async" src="/images/profile.svg" alt="" width="99" height="99">
+                        <img class="profile" loading="lazy" decoding="async" src="./images/man.png" alt="" width="99" height="99">
                      </picture>
                      <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
@@ -149,13 +143,13 @@
                      <div class="star-group">
                          <span class="name">Alex L.<span class="desc">Homeowner</span></span>
                          <picture>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/stars.svg" alt="stars" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
                          </picture>
                      </div>
                 </div>
                 <div class="review">
                     <picture>
-                        <img class="profile" loading="lazy" decoding="async" src="/images/profile-woman.svg" alt="" width="99" height="99">
+                        <img class="profile" loading="lazy" decoding="async" src="./images/man.png" alt="" width="99" height="99">
                      </picture>
                      <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
@@ -163,13 +157,13 @@
                      <div class="star-group">
                         <span class="name">Arrieana M.<span class="desc">Homeowner</span></span>
                          <picture>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/stars.svg" alt="stars" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
                          </picture>
                      </div>
                 </div>
                 <div class="review">
                     <picture>
-                        <img class="profile" loading="lazy" decoding="async" src="/images/profile.svg" alt="" width="99" height="99">
+                        <img class="profile" loading="lazy" decoding="async" src="./images/man.png" alt="" width="99" height="99">
                      </picture>
                      <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
@@ -177,13 +171,13 @@
                      <div class="star-group">
                         <span class="name">Leo N.<span class="desc">Homeowner</span></span>
                          <picture>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/stars.svg" alt="stars" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
                          </picture>
                      </div>
                 </div>
                 <div class="review">
                     <picture>
-                        <img class="profile" loading="lazy" decoding="async" src="/images/profile.svg" alt="" width="99" height="99">
+                        <img class="profile" loading="lazy" decoding="async" src="./images/man.png" alt="" width="99" height="99">
                      </picture>
                      <p>
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
@@ -191,7 +185,7 @@
                      <div class="star-group">
                          <span class="name">Brian A.<span class="desc">Homeowner</span></span>
                          <picture>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="/images/stars.svg" alt="stars" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
                          </picture>
                      </div>
                 </div>
@@ -208,12 +202,12 @@
                 <p>
                     Say something catchy, informative, and encouraging to click the button to go to the contact page.  I like to add these to the bottom of all pages.
                 </p>
-                <a href="/contact.html" class="button-solid">Free Estimate</a>
+                <a href="./contact.html" class="button-solid">Free Estimate</a>
             </div>
             <picture>
-                <source media="(max-width: 600px)" srcset="/images/cabinets2-m.webp">
-                <source media="(min-width: 601px)" srcset="/images/cabinets2.jpg">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="/images/cabinets2.jpg" alt="kitchen cabinets" width="1920" height="1280">
+                <source media="(max-width: 600px)" srcset="./images/cabinets2-m.webp">
+                <source media="(min-width: 601px)" srcset="./images/cabinets2.jpg">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="./images/cabinets2.jpg" alt="kitchen cabinets" width="1920" height="1280">
              </picture>
         </section>
 
@@ -226,7 +220,7 @@
     <footer id="footer">
         <div class="container">
             <div class="left-section">
-                <a class="logo" href="/index.html"><img loading="lazy" decoding="async" src="/images/logo-light.png" alt="logo" width="264" height="78"></a>
+                <a class="logo" href="./index.html"><img loading="lazy" decoding="async" src="./images/logo-light.png" alt="logo" width="264" height="78"></a>
                 <p>
                     Extra content if you need it, if not you can delete this whole p tag. I usually do.
                 </p>
@@ -235,11 +229,11 @@
                 <div class="lists">
                     <ul>
                         <li><h2>Information</h2></li>
-                        <li><a href="/index.html">Home</a></li>
-                        <li><a href="/about.html">About Us</a></li>
-                        <li><a href="/projects.html">Projects</a></li>
-                        <li><a href="/testimonials.html">Reviews</a></li>
-                        <li><a href="/contact.html">Contact</a></li>
+                        <li><a href="./index.html">Home</a></li>
+                        <li><a href="./about.html">About Us</a></li>
+                        <li><a href="./projects.html">Projects</a></li>
+                        <li><a href="./testimonials.html">Reviews</a></li>
+                        <li><a href="./contact.html">Contact</a></li>
                     </ul>
                     <ul>
                         <li><h2>Services</h2></li>
@@ -250,7 +244,7 @@
                     </ul>
                     <ul>
                         <li><h2>Contact</h2></li>
-                        <li><a href="/contact.html">First Address Line<br>Denver CO 80206</a></li>
+                        <li><a href="./contact.html">First Address Line<br>Denver CO 80206</a></li>
                         <li><a href="tel:555-779-4407">T: (555) 779-4407</a></li>
                         <li><a href="mailto:email@email.com">Click to Email</a></li>
                     </ul>
@@ -264,8 +258,8 @@
             <span class="copyright"> Copyright 2021 - Present</span></div>
     </footer>
 
-    <script defer src="/nav.js"></script>
-    <script defer src="/dark.js"></script>
+    <script defer src="./nav.js"></script>
+    <script defer src="./dark.js"></script>
     <!--
         This script adds a class to the body after scrolling 100px
         and we used these body.scroll styles to create some on scroll 
