<format> formatted review cards and included copy!

--- a/reviews.html
+++ b/reviews.html
@@ -106,10 +106,10 @@
                         <img class="profile" loading="lazy" decoding="async" src="./images/man.png" alt="" width="99" height="99">
                      </picture>
                      <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                        Simply put, I am very happy with the haircut I got from Nigel.I'll definitely be back.
                      </p>
                      <div class="star-group">
-                        <span class="name">B Miller<span class="desc">Homeowner</span></span>
+                        <span class="name">V Levachyov<span class="desc">Local Guide</span></span>
                          <picture>
                             <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
                             <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
@@ -124,11 +124,15 @@
                         <img class="profile" loading="lazy" decoding="async" src="./images/man.png" alt="" width="99" height="99">
                      </picture>
                      <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                        Superb, he cuts really well. Totally recommend a visit to PRIME!
                      </p>
                      <div class="star-group">
-                        <span class="name">Vincent M.<span class="desc">Homeowner</span></span>
+                        <span class="name">M Walker.<span class="desc">Customer</span></span>
                          <picture>
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
                             <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
                          </picture>
                      </div>
@@ -138,11 +142,15 @@
                         <img class="profile" loading="lazy" decoding="async" src="./images/man.png" alt="" width="99" height="99">
                      </picture>
                      <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                        Great Service and a great haircut!
                      </p>
                      <div class="star-group">
-                         <span class="name">Alex L.<span class="desc">Homeowner</span></span>
+                         <span class="name">E Foods.<span class="desc">Local Business Owner</span></span>
                          <picture>
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
                             <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
                          </picture>
                      </div>
@@ -152,11 +160,15 @@
                         <img class="profile" loading="lazy" decoding="async" src="./images/man.png" alt="" width="99" height="99">
                      </picture>
                      <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                       A great guy and a great haircut! 
                      </p>
                      <div class="star-group">
-                        <span class="name">Arrieana M.<span class="desc">Homeowner</span></span>
+                        <span class="name">N Broughton.<span class="desc">Customer</span></span>
                          <picture>
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
                             <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
                          </picture>
                      </div>
@@ -166,29 +178,20 @@
                         <img class="profile" loading="lazy" decoding="async" src="./images/man.png" alt="" width="99" height="99">
                      </picture>
                      <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
+                        Fantastic barber and great service, great conversation and leaves you feeling fresh!
                      </p>
                      <div class="star-group">
-                        <span class="name">Leo N.<span class="desc">Homeowner</span></span>
+                        <span class="name">C Davies.<span class="desc">Customer</span></span>
                          <picture>
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
+                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
                             <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
                          </picture>
                      </div>
                 </div>
-                <div class="review">
-                    <picture>
-                        <img class="profile" loading="lazy" decoding="async" src="./images/man.png" alt="" width="99" height="99">
-                     </picture>
-                     <p>
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed recusandae rerum unde similique ratione sapiente necessitatibus natus mollitia nam iusto.
-                     </p>
-                     <div class="star-group">
-                         <span class="name">Brian A.<span class="desc">Homeowner</span></span>
-                         <picture>
-                            <img aria-hidden="true" loading="lazy" decoding="async" src="./images/scissors.png" alt="scissors score" width="91" height="15">
-                         </picture>
-                     </div>
-                </div>
+               
             </div>
         </section>
 
@@ -198,11 +201,11 @@
 
         <section id="cta">
             <div class="container">
-                <h2 class="title">Get It Done <br> With Us Today</h2>
+                <h2 class="title">Come Down<br> Get a fresh trim!</h2>
                 <p>
-                    Say something catchy, informative, and encouraging to click the button to go to the contact page.  I like to add these to the bottom of all pages.
+                    Opening hours can be found on the contact page. We are located in Hoole Village, just outside the city center!
                 </p>
-                <a href="./contact.html" class="button-solid">Free Estimate</a>
+                <a href="./contact.html" class="button-solid">Contact!</a>
             </div>
             <picture>
                 <source media="(max-width: 600px)" srcset="./images/cabinets2-m.webp">
@@ -219,34 +222,20 @@
 
     <footer id="footer">
         <div class="container">
-            <div class="left-section">
-                <a class="logo" href="./index.html"><img loading="lazy" decoding="async" src="./images/logo-light.png" alt="logo" width="264" height="78"></a>
-                <p>
-                    Extra content if you need it, if not you can delete this whole p tag. I usually do.
-                </p>
-            </div>
             <div class="right-section">
                 <div class="lists">
                     <ul>
                         <li><h2>Information</h2></li>
                         <li><a href="./index.html">Home</a></li>
-                        <li><a href="./about.html">About Us</a></li>
-                        <li><a href="./projects.html">Projects</a></li>
+                        <li><a href="./projects.html">Gallery</a></li>
                         <li><a href="./testimonials.html">Reviews</a></li>
                         <li><a href="./contact.html">Contact</a></li>
                     </ul>
-                    <ul>
-                        <li><h2>Services</h2></li>
-                        <li>Service1</li>
-                        <li>Service2</li>
-                        <li>Service4</li>
-                        <li>Service5</li>
-                    </ul>
+                
                     <ul>
                         <li><h2>Contact</h2></li>
-                        <li><a href="./contact.html">First Address Line<br>Denver CO 80206</a></li>
-                        <li><a href="tel:555-779-4407">T: (555) 779-4407</a></li>
-                        <li><a href="mailto:email@email.com">Click to Email</a></li>
+                        <li><a href="./contact.html">18A Faulkner St,<br> Hoole, Chester CH2 3BD</a></li>
+                        <li><a href="tel:07545 444435">T: 07545 444435</a></li>
                     </ul>
                 </div>
             </div>
@@ -254,7 +243,7 @@
 
         <div class="credit">
             <span>Designed and Hand Coded by</span>
-            <a href="" target="_blank" rel="noopener">Your Company Name</a>
+            <a href="https://github.com/VenexCon" target="_blank" rel="noopener">VenexCon</a>
             <span class="copyright"> Copyright 2021 - Present</span></div>
     </footer>
 
