<style> root.less, #nav-bar menu top: updated 54/16em

--- a/reviews.html
+++ b/reviews.html
@@ -208,9 +208,9 @@
                 <a href="./contact.html" class="button-solid">Contact!</a>
             </div>
             <picture>
-                <source media="(max-width: 600px)" srcset="./images/cabinets2-m.webp">
-                <source media="(min-width: 601px)" srcset="./images/cabinets2.jpg">
-                <img aria-hidden="true" loading="lazy" decoding="async" src="./images/cabinets2.jpg" alt="kitchen cabinets" width="1920" height="1280">
+                <source media="(max-width: 600px)" srcset="./images/review-footer.jpg">
+                <source media="(min-width: 601px)" srcset="./images/review-footer.jpg">
+                <img aria-hidden="true" loading="lazy" decoding="async" src="./images/review-footer.jpg" alt="Motorbike Image" width="1920" height="1280">
              </picture>
         </section>
 
