<update> updated project.html with 2 x gallery pics, resize on screen width

--- a/reviews.html
+++ b/reviews.html
@@ -16,12 +16,11 @@
     <meta property="og:description" content="Mens Barbers in Chester" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="" />
-    <meta property="og:image" content="./images/social.jpg" />
-    <meta property="og:image:secure_url" content="./images/social.jpg" />
+   
 
     <!--Favicons-->
     <!--Use https://realfavicongenerator.net/ to generate and download your favicons-->
-    <link rel="apple-touch-icon" sizes="180x180" href="./apple-touch-icon.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./images/barber-shop32.png">
     <link rel="icon" type="image/png" sizes="32x32" href="./images/barber-shop32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="./images/BarberPole16.png">
     <link rel="manifest" href="./site.webmanifest">
