<style> re-sized index,contact,projects and review images

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 </div>
             </div>
             <picture>
-                <img aria-hidden="true" decoding="async" src="./images/apothecary.jpg" alt="new home" width="275" height="132">
+                <img aria-hidden="true" decoding="async" src="./images/apothecary132.jpg" alt="new home" width="275" height="412">
              </picture>
         </section>
 
